update user apis
