# src/controllers/user.js
@@ -3,41 +3,6 @@ const bcrypt = require('bcryptjs');
 const asyncHandler = require('express-async-handler');
 const jwt = require('jsonwebtoken');
 
-// login user
-// post /login
-// public
-const loginUser = asyncHandler(async (req, res) => {
-  const { email, password } = req.body;
-  if (!email || !password) {
-    res.status(400);
-    throw new Error('all fields are mandatory');
-  }
-  const user = await Users.findOne({ email });
-  if (!user) {
-    res.status(401);
-    throw new Error('user is not exist');
-  }
-  if (user && (await bcrypt.compare(password, user.password))) {
-    const accessToken = await jwt.sign(
-      {
-        user: {
-          name: user.name,
-          email: user.email,
-          _id: user._id,
-        },
-      },
-      process.env.TOKEN_SECRET,
-      {
-        expiresIn: '1week',
-      }
-    );
-    res.status(200).json({ accessToken });
-  } else {
-    res.status(401);
-    throw new Error('email or password is not valid');
-  }
-});
-
 // register user
 // post /register
 // public
@@ -57,6 +22,7 @@ const registerUser = asyncHandler(async (req, res) => {
     name,
     email,
     password: hashedPassword,
+    image: `https://shop-bread.onrender.com/api/${req.file.path}`,
   });
   if (newUser) {
     res.status(200);
@@ -66,7 +32,60 @@ const registerUser = asyncHandler(async (req, res) => {
   }
 });
 
+// login user
+// post /login
+// public
+const loginUser = asyncHandler(async (req, res) => {
+  const { email, password } = req.body;
+  if (!email || !password) {
+    res.status(400);
+    throw new Error('all fields are mandatory');
+  }
+  const user = await Users.findOne({ email }).lean();
+  if (!user) {
+    res.status(401);
+    throw new Error('user is not exist');
+  }
+  if (user && (await bcrypt.compare(password, user.password))) {
+    const accessToken = await jwt.sign(
+      {
+        user: {
+          name: user.name,
+          email: user.email,
+          _id: user._id,
+        },
+      },
+      process.env.TOKEN_SECRET,
+      {
+        expiresIn: '1week',
+      }
+    );
+    delete user._id;
+    delete user.password;
+    res.status(200).json({ accessToken, user });
+  } else {
+    res.status(401);
+    throw new Error('email or password is not valid');
+  }
+});
+
+// get user info
+// get /user-info
+// private
+const userInfo = asyncHandler(async (req, res) => {
+  const userId = req.user._id;
+  const user = await Users.findById(userId).lean();
+  if (!user) {
+    res.status(401);
+    throw new Error('user is not exist');
+  }
+  delete user._id;
+  delete user.password;
+  res.status(200).json({ user });
+});
+
 module.exports = {
-  loginUser,
   registerUser,
+  loginUser,
+  userInfo,
 };
